# noType

./: .gitignore  CMakeLists.txt  LICENSE  README.md
project/Client/: CMakeLists.txt  snapcraft.yaml
project/Client/application/: main.cpp
project/Client/application/GUI/: GUI_element.cpp  GUI_element.hpp  GUI_event.hpp  GUI_interface.cpp  GUI_interface.hpp  GUI_label.cpp  GUI_label.hpp  GUI_manager.cpp  GUI_manager.hpp  GUI_style.hpp  GUI_textField.cpp  GUI_textField.hpp  baseElement.cpp  baseElement.hpp  button.cpp  button.hpp  progressBar.hpp  smartString.cpp  smartString.hpp  string.cpp  string.hpp  textLabel.cpp  textLabel.hpp
project/Client/application/Network/: CMakeLists.txt  Network.hpp
project/Client/application/eventManager/: eventManager.cpp  eventManager.hpp
project/Client/application/exceptions/: exceptions.hpp
project/Client/application/game/: game.cpp  game.hpp
project/Client/application/logger/: fileLogger.cpp  fileLogger.hpp  logger.cpp  logger.hpp
project/Client/application/music/: audioManager.hpp  soundManager.cpp  soundManager.hpp
project/Client/application/musicManager/: musicManager.cpp  musicManager.hpp
project/Client/application/new_gui/: baseElement.cpp  baseElement.hpp  button.cpp  button.hpp  gui_event.hpp
project/Client/application/resourceManager/: resourceManager.cpp  resourceManager.hpp
project/Client/application/resources/: audioManager.hpp  fontManager.hpp  resourceManager.hpp  textureManager.hpp
project/Client/application/sharedContext/: sharedContext.hpp
project/Client/application/soundManager/: soundManager.cpp  soundManager.hpp
project/Client/application/stateManager/: stateManager.cpp  stateManager.hpp
project/Client/application/states/: afterGameState.cpp  afterGameState.hpp  baseState.cpp  baseState.hpp  beforeGameState.cpp  beforeGameState.hpp  gameState.cpp  gameState.hpp  introState.cpp  introState.hpp  mainMenuState.cpp  mainMenuState.hpp  pauseState.cpp  pauseState.hpp
project/Client/application/ui/: baseElement.cpp  baseElement.hpp  filler.cpp  filler.hpp  label.cpp  label.hpp  progressBar.cpp  progressBar.hpp  smartString.cpp  smartString.hpp  spriteAnimation.cpp  spriteAnimation.hpp  string.cpp  string.hpp  textField.cpp  textField.hpp
project/Client/application/utils/: utils.hpp
project/Client/application/window/: window.cpp  window.hpp
project/Client/assets/: audio.cfg  audio.json  bindings.json  fonts.cfg  fonts.json  keys.cfg  textures.cfg  textures.json
project/Client/cmake/: FindSFML.cmake
project/Client/linters/: run.sh
project/Client/linters/pvs/: PVS-Studio.lic
project/Client/resources/: audio.cfg  keys.cfg
project/Client/snap/: snapcraft.yaml
project/Client/src/: CMakeLists.txt  main.cpp
project/Client/src/Network/: CMakeLists.txt
project/Client/src/eventManager/: eventManager.hpp
project/Client/src/game/: game.hpp
project/Client/src/logger/: logger.cpp
project/Client/src/resources/: audioManager.hpp
project/Client/src/sharedContext/: sharedContext.hpp
project/Client/src/soundManager/: soundManager.cpp
project/Client/src/states/: afterGameState.cpp  afterGameState.hpp  beforeGameState.cpp  beforeGameState.hpp  gameState.cpp  gameState.hpp  mainMenuState.cpp  mainMenuState.hpp
project/Client/src/ui/: baseElement.cpp  baseElement.hpp  filler.cpp  filler.hpp  label.cpp  label.hpp  progressBar.cpp  progressBar.hpp  smartString.cpp  smartString.hpp  spriteAnimation.cpp  textField.cpp  textField.hpp
project/Client/tests/: CMakeLists.txt  main.cpp
project/Client/thirdPartyLib/animation/: animatedSprite.cpp  animatedSprite.hpp  animation.cpp  animation.hpp
project/Client/thirdPartyLib/colorString/: RichText.hpp
project/Client/thirdPartyLib/progressBar/: selbaProgressBar.cpp
project/DataBase/: CMakeLists.txt
project/DataBase/DataBaseConfig/: DataBaseConfig.hpp
project/DataBase/DataBaseFacade/: CMakeLists.txt  DataBaseFacade.cpp  test_DataBaseFacade.cpp
project/DataBase/DataBaseInit/: CMakeLists.txt
project/DataBase/DataBaseInit/Data/: texts.txt
project/DataBase/PlayerInfo/: CMakeLists.txt  PlayerInfo.hpp  PlayerInfoImpl.cpp  PlayerInfoImpl.hpp  test_PlayerInfo.cpp
project/DataBase/RandomName/: CMakeLists.txt  RandomName.hpp  RandomNameImpl.cpp  RandomNameImpl.hpp  test_RandomNameImpl.cpp
project/DataBase/TextInfo/: CMakeLists.txt  PlayerInfoImpl.cpp  RandomNameImpl.hpp  TextInfo.hpp  TextInfoImpl.cpp  TextInfoImpl.hpp  test_TextInfoImpl.cpp
project/Server/: CMakeLists.txt
project/Server/config/: Server.conf
project/Server/enum/: enum.hpp
project/Server/include/: README.md
project/Server/linters/: run.sh
project/Server/source/: CMakeLists.txt  main.cpp  mainTest.cpp  testmain.cpp
project/Server/source/Command/: Command.cpp  Command.hpp  CommandFactory.cpp  CommandFactory.hpp  Connect.cpp  Connect.hpp  GetRoomStatus.cpp  GetRoomStatus.hpp  GetText.cpp  GetText.hpp  Init.cpp  Init.hpp  LeaveRoom.cpp  LeaveRoom.hpp  StartGameSession.cpp  StartGameSession.hpp  ValidateWrittenText.cpp  ValidateWrittenText.hpp
project/Server/source/ConfigParser/: ConfigParser.cpp  ConfigParser.hpp
project/Server/source/Controller/: BasicController.cpp  BasicController.hpp  GameController.cpp  GameController.hpp
project/Server/source/DataBase/: CMakeLists.txt
project/Server/source/Exceptions/: Exceptions.hpp
project/Server/source/Logger/: Logger.cpp  Logger.hpp  LoggerConfig.hpp
project/Server/source/Parser/: Parse.cpp  Parse.hpp
project/Server/source/ProgramOptionsParser/: ProgramOptionsParser.cpp  ProgramOptionsParser.hpp
project/Server/source/QueueManager/: CMakeLists.txt  Queue.cpp  Queue.hpp  QueueManager.cpp  QueueManager.hpp
project/Server/source/Room/: CMakeLists.txt  Player.cpp  Player.hpp  Room.cpp  Room.hpp  RoomConfig.hpp  RoomManager.cpp  RoomManager.hpp
project/Server/source/RoomStatus/: IRoomStatus.hpp  RoomEnd.cpp  RoomEnd.hpp  RoomPlay.cpp  RoomPlay.hpp  RoomWait.cpp  RoomWait.hpp
project/Server/source/Setup/: Setup.cpp  Setup.hpp
project/Server/source/TcpServer/: CMakeLists.txt  Client.cpp  Client.hpp  (+5 more)
(+100 files in other folders)
