CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(noType)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wpedantic")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")


# set output binary dir
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

ADD_SUBDIRECTORY(project)
