CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(noType)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wpedantic")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

#SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "modules")
#set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules" ${CMAKE_MODULE_PATH})
#message(${CMAKE_SOURCE_DIR})

ADD_SUBDIRECTORY(source)